tests/ui/const-generics/exhaustive-value.stderr
error[E0277]: the trait bound `(): Foo<N>` is not satisfied
  --> $DIR/exhaustive-value.rs:262:6
   |
LL |     <() as Foo<N>>::test()
   |      ^^ the trait `Foo<N>` is not implemented for `()`
   |
   = help: `()` implements trait `Foo<N>`:
             Foo<0>
             Foo<100>
             Foo<101>
             Foo<102>
             Foo<103>
             Foo<104>
             Foo<105>
             Foo<106>
           and 248 others

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
